元素渲染过程

--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .red {
+        color: red;
+      }
+      .green {
+        color: green;
+      }
+      .blue {
+        color: blue;
+      }
+      .weight {
+        font-weight: 700;
+      }
+      .bg-red {
+        background-color: red;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
